--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2.0",
         "maatwebsite/excel": "^3.1",
-        "shuchkin/simplexlsxgen": "^1.2",
-        "xenon/laravelbdsms": "v1.0.44.3"
+        "shuchkin/simplexlsxgen": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
